[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jwtforge"
version = "1.0.0"
description = "JWT decoder, auditor, and forge tool for authorized testing"
requires-python = ">=3.11"
dependencies = ["click>=8", "rich>=13", "pyjwt>=2"]

[project.scripts]
jwtforge = "jwtforge.cli:cli"
